--- a/index.html
+++ b/index.html
@@ -93,6 +93,6 @@
                     crossorigin="anonymous"></script>
 
 </body>
-<script src="\index.js"></script>
+<script src="index.js"></script>
 
 </html>
